--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  {{#if user}}
+    <p>
+      Hello {{user.displayName}} |
+      <a href="/logout">Logout</a>
+    </p>
+  {{else}}
+    <p>
+      <a href="/auth/linkedin">Login</a>
+    </p>
+  {{/if}}
+
+  {{{body}}}
+</body>
+
 </html>
