--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>LinkedIn oAuth Practice: Home</h1>
+
+{{#if profile}}
+  <img src="{{profile.pictureUrl}}">
+{{/if}}
